[project]
name = "eval-tst"
version = "0.1.0"
description = "evaluate text style transfer sentences."
authors = [
    {name = "GandT",email = "19548351+GandT@users.noreply.github.com"}
]
packages = [
  { include = "eval_tst" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "nltk (>=3.9.1,<4.0.0)",
    "rouge-score (>=0.1.2,<0.2.0)",
    "bert-score (>=0.3.13,<0.4.0)",
    "sacrebleu (>=2.5.1,<3.0.0)",
    "jsonline (>=0.2.1,<0.3.0)",
    "torchmetrics (>=1.7.2,<2.0.0)",
    "mecab-python3 (>=1.0.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
